[FLINK-38894][runtime/rest] Introduce the /jobs/:jobid/rescales/history endpoint in the REST API